second minor change

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     <script>
         var card =document.getElementById("card");
         function openREGISTER(){
-            card.style.transform="rotateY(-180deg)"
+            card.style.transform="rotateY(-180deg)";
         }
         function openLogin(){
-            card.style.transform="rotateY(0deg)"
+            card.style.transform="rotateY(0deg)";
         }
     </script>
 </body>
